client/src/elements/atoms/icon-button.css
icon-button {
  display: block;
  cursor: pointer;
  width: auto;
}

icon-button button {
  padding: 0;
  margin: 0;
  width: 100%;

  cursor: pointer;

  font-family: inherit;
  line-height: inherit;
  font-size: 14px;
  color: inherit;

  border-width: 1px;
  border-style: solid;
  border-radius: 18px;

  height: 36px;

  display: flex;
  align-items: center;
  justify-content: center;
}

icon-button button:focus {
  outline: none;
}

.icon-button__icon {
  width: 34px;
  height: 34px;
}

.icon-button__icon:empty {
  display: none;
}

.icon-button__text {
  min-width: 34px;
  padding-left: var(--q-space-base);
  padding-right: var(--q-space-base);
}

.icon-button__text:empty {
  display: none;
}

icon-button.size-small {
  height: 24px;
}

icon-button.size-small .icon-button__icon {
  height: 22px;
  width: 22px;
}

icon-button.size-small button {
  height: 24px;
  border-radius: 12px;
}

icon-button.size-big {
  height: 48px;
}

icon-button.size-big .icon-button__icon {
  height: 46px;
  width: 46px;
}

icon-button.size-big button {
  height: 48px;
  border-radius: 24px;
}

icon-button.size-huge {
  height: 80px;
}

icon-button.size-huge .icon-button__icon {
  height: 78px;
  width: 78px;
}

icon-button.size-huge button {
  height: 80px;
  border-radius: 40px;
}

